feat(wm): add hyprpaper in config

--- a/.config/hypr/general.conf
+++ b/.config/hypr/general.conf
@@ -11,6 +11,8 @@ decoration {
 }
 
 misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
     animate_mouse_windowdragging = true
     enable_swallow = true
     swallow_regex = ^(foot)$
