feat(wm): add shadow and catppuccin theme

--- a/.config/hypr/general.conf
+++ b/.config/hypr/general.conf
@@ -2,11 +2,17 @@ general {
     layout = dwindle
     border_size = 2
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 12
+    col.active_border = $blue $lavender $red 45deg
+    col.inactive_border = $surface1
 }
 
 decoration {
     rounding = 3
+    drop_shadow = true
+    shadow_range = 15
+    col.shadow = rgba($lavenderAlphacc)
+    col.shadow_inactive = $mantle
 }
 
 misc {
