--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,4 @@
+source = $XDG_CONFIG_HOME/hypr/catppuccin-mocha.conf
 source = $XDG_CONFIG_HOME/hypr/autostart.conf
 source = $XDG_CONFIG_HOME/hypr/general.conf
 source = $XDG_CONFIG_HOME/hypr/layouts.conf
