chore: add keybinding to screenshot the whole screen

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -4,6 +4,7 @@ input {
     kb_variant =
     kb_model =
     kb_options =
+    numlock_by_default = true
 
     repeat_rate = 50
     repeat_delay = 300
@@ -66,6 +67,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Applications
 bind = $mainMod, S, exec, grimblast copysave area /tmp/screenshot.png
+bind = $mainMod SHIFT, S, exec, grimblast copysave output /tmp/screenshot.png
 bind = $mainMod, R, exec, dmenu_run
 bind = $mainMod, L, exec, _START_LFCD=1 footclient -E # Requires -E when using footclient instead  of foot
 
