chore: minor tweak to the color of active border

--- a/.config/hypr/general.conf
+++ b/.config/hypr/general.conf
@@ -1,17 +1,18 @@
+#vim: ft=conf
 general {
     layout = dwindle
     border_size = 2
     gaps_in = 5
     gaps_out = 12
-    col.active_border = $blue $lavender $red 45deg
+    col.active_border = $blue $red 45deg
     col.inactive_border = $surface1
 }
 
 decoration {
-    rounding = 3
+    rounding = 10
     drop_shadow = true
     shadow_range = 15
-    col.shadow = rgba($lavenderAlphacc)
+    # col.shadow = rgba($lavenderAlphacc)
     col.shadow_inactive = $mantle
 }
 
