fix: change keybindings from I to O for right direction

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -19,17 +19,17 @@ bind = $mainMod, Q, killactive
 
 # Window-specific
 bind = $mainMod, Y, movefocus, l
-bind = $mainMod, I, movefocus, r
+bind = $mainMod, O, movefocus, r
 bind = $mainMod, N, movefocus, d
 bind = $mainMod, E, movefocus, u
 
 bind = $mainMod SHIFT, Y, movewindow, l
-bind = $mainMod SHIFT, I, movewindow, r
+bind = $mainMod SHIFT, O, movewindow, r
 bind = $mainMod SHIFT, N, movewindow, d
 bind = $mainMod SHIFT, E, movewindow, u
 
 bind = $mainMod CTRL, Y, resizeactive, -10 0
-bind = $mainMod CTRL, I, resizeactive, 10 0
+bind = $mainMod CTRL, O, resizeactive, 10 0
 bind = $mainMod CTRL, N, resizeactive, 0 -10
 bind = $mainMod CTRL, E, resizeactive, 0 10
 
