chore: add emacsclient as a keybinding

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -10,7 +10,7 @@ input {
     repeat_delay = 300
 
     sensitivity = 0
-    follow_mouse = 1
+    follow_mouse = 2
 }
 
 $mainMod = ALT
@@ -70,6 +70,7 @@ bind = $mainMod, S, exec, grimblast copysave area /tmp/screenshot.png
 bind = $mainMod SHIFT, S, exec, grimblast copysave output /tmp/screenshot.png
 bind = $mainMod, R, exec, dmenu_run
 bind = $mainMod, L, exec, _START_LFCD=1 footclient -E # Requires -E when using footclient instead  of foot
+bind = $mainMod, A, exec, emacsclient -c
 
 # Eww-specific
 bind = $mainMod, B, exec, eww-toggle bar
