chore: adjust resize size

--- a/.config/hypr/general.conf
+++ b/.config/hypr/general.conf
@@ -23,4 +23,5 @@ misc {
     animate_mouse_windowdragging = true
     enable_swallow = true
     swallow_regex = ^(foot)$
+    swallow_exception_regex = ^(wev)$
 }
