chore: change wallpaper

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -61,6 +61,12 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+## Special workspace
+bind = $mainMod SHIFT, A, movetoworkspace, special:agenda
+bind = $mainMod SHIFT, W, movetoworkspace, special:float
+bind = $mainMod, A, togglespecialworkspace, agenda
+bind = $mainMod, W, togglespecialworkspace, float
+
 # Move/resize windows
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
@@ -70,7 +76,7 @@ bind = $mainMod, S, exec, grimblast copysave area /tmp/screenshot.png
 bind = $mainMod SHIFT, S, exec, grimblast copysave output /tmp/screenshot.png
 bind = $mainMod, R, exec, dmenu_run
 bind = $mainMod, L, exec, _START_LFCD=1 footclient -E # Requires -E when using footclient instead  of foot
-bind = $mainMod, A, exec, emacsclient -c
+bind = $mainMod, T, exec, emacsclient -c
 
 # Eww-specific
 bind = $mainMod, B, exec, eww-toggle bar
