feat: initialize btrfs script

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -3,9 +3,9 @@ app-id=foot
 title=foot
 
 font=monospace:pixelsize=17:antialias=true:autohint=true
-line-height = 17.2
 vertical-letter-offset=1.5
 underline-offset=17.2
+pad=20x20
 #font-size-adjustment=1.2
 
 [cursor]
