--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -28,10 +28,10 @@ bind = $mainMod SHIFT, O, movewindow, r
 bind = $mainMod SHIFT, N, movewindow, d
 bind = $mainMod SHIFT, E, movewindow, u
 
-bind = $mainMod CTRL, Y, resizeactive, -20 0
-bind = $mainMod CTRL, O, resizeactive, 20 0
-bind = $mainMod CTRL, N, resizeactive, 0 -20
-bind = $mainMod CTRL, E, resizeactive, 0 20
+binde = $mainMod CTRL, Y, resizeactive, -20 0
+binde = $mainMod CTRL, O, resizeactive, 20 0
+binde = $mainMod CTRL, N, resizeactive, 0 -20
+binde = $mainMod CTRL, E, resizeactive, 0 20
 
 # Fullscreen
 bind = $mainMod, F, fullscreen, 0
@@ -72,11 +72,19 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Applications
-bind = $mainMod, S, exec, grimblast copysave area /tmp/screenshot.png
-bind = $mainMod SHIFT, S, exec, grimblast copysave output /tmp/screenshot.png
-bind = $mainMod, R, exec, dmenu_run
+bind = $mainMod, S, exec, screenshot-wayland area
+bind = $mainMod CTRL, S, exec, screenshot-wayland screen
+bind = $mainMod SHIFT, S, exec, screenshot-wayland area && clipboard-img-ocr
+bind = $mainMod, R, exec, wofi
 bind = $mainMod, L, exec, _START_LFCD=1 footclient -E # Requires -E when using footclient instead  of foot
 bind = $mainMod, T, exec, emacsclient -c
 
 # Eww-specific
 bind = $mainMod, B, exec, eww-toggle bar
+
+# Submaps
+bind = $mainMod, K, submap, create
+submap = create
+bind = , T, exec, /home/sheape/.config/doom/create
+bind = ,escape, submap, reset
+submap = reset
