--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -1,3 +1,4 @@
 windowrulev2=tile,class:^(Nsxiv)$
 windowrulev2=workspace 7,class:(mpv)
 windowrulev2=pin,class:^(showmethekey-gtk)$
+windowrulev2=workspace special:create,title:org-capture-task
