--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -5,7 +5,7 @@
 color_theme = "/home/sheape/.config/btop/themes/catppuccin_mocha.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
-theme_background = True
+theme_background = False
 
 #* Sets if 24-bit truecolor should be used, will convert 24-bit colors to 256 color (6x6x6 color cube) if false.
 truecolor = True
@@ -60,7 +60,7 @@ proc_sorting = "memory"
 proc_reversed = False
 
 #* Show processes as a tree.
-proc_tree = True
+proc_tree = False
 
 #* Use the cpu graph colors in the process list.
 proc_colors = True
