--- a/.config/hypr/general.conf
+++ b/.config/hypr/general.conf
@@ -1,4 +1,3 @@
-#vim: ft=conf
 general {
     layout = dwindle
     no_cursor_warps = true
@@ -6,7 +5,6 @@ general {
     gaps_in = 5
     gaps_out = 12
     col.active_border = $blue $red 45deg
-    col.inactive_border = $surface1
 }
 
 decoration {
@@ -15,13 +13,39 @@ decoration {
     shadow_range = 15
     # col.shadow = rgba($lavenderAlphacc)
     col.shadow_inactive = $mantle
+    blur {
+        enabled = true
+        passes = 1
+        new_optimizations = true
+        ignore_opacity = true
+    }
 }
 
 misc {
-    disable_hyprland_logo = true
-    disable_splash_rendering = true
-    animate_mouse_windowdragging = true
-    enable_swallow = true
-    swallow_regex = ^(foot)$
-    swallow_exception_regex = ^(wev)$
+     disable_hyprland_logo = true
+     disable_splash_rendering = true
+     animate_manual_resizes = true
+     animate_mouse_windowdragging = true
+     enable_swallow = true
+     swallow_regex = ^(foot)$
+     swallow_exception_regex = ^(wev)$
+}
+
+animations {
+  enabled = true
+
+  bezier = wind, 0.05, 0.9, 0.1, 1.05
+  bezier = winIn, 0.1, 1.1, 0.1, 1.1
+  bezier = winOut, 0.3, -0.3, 0, 1
+  bezier = liner, 1, 1, 1, 1
+
+  animation = windows, 1, 6, wind, slide
+  animation = windowsIn, 1, 6, winIn, slide
+  animation = windowsOut, 1, 5, winOut, slide
+  animation = windowsMove, 1, 5, wind, slide
+  animation = border, 1, 1, liner
+  animation = borderangle, 1, 30, liner, loop
+  animation = fade, 1, 10, default
+  animation = workspaces, 1, 5, wind
+  animation = specialWorkspace, 1, 5, wind, slidevert
 }
